@@ -4,12 +4,13 @@
 #
 
 QUEUE_PATH="/var/spool/starling"
-SCALA_HOME="/usr/local/scala"
 SCARLING_HOME="/usr/local/scarling"
 AS_USER="daemon"
+VERSION="0.5"
 
-daemon_args="--name scarling --pidfile /var/run/scarling/scarling.pid"
-JAVA_OPTS="-server -XX:+UseConcMarkSweepGC -XX:+UseParNewGC"
+daemon_args="--name scarling --pidfile /var/run/scarling.pid"
+HEAP_OPTS="-Xmx2048m"
+JAVA_OPTS="-server -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=9999 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -verbosegc -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC $HEAP_OPTS"
 
 
 function running() {
@@ -20,7 +21,7 @@ function find_java() {
     if [ ! -z "$JAVA_HOME" ]; then
         return
     fi
-    potential=$(ls -r1d /opt/jdk /System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home /usr/java/j* /usr/java/default 2>/dev/null)
+    potential=$(ls -r1d /opt/jdk /System/Library/Frameworks/JavaVM.framework/Versions/CurrentJDK/Home /usr/java/default /usr/java/j* 2>/dev/null)
     for p in $potential; do
         if [ -x $p/bin/java ]; then
             JAVA_HOME=$p
@@ -46,7 +47,7 @@ case "$1" in
     start)
         echo -n "Starting scarling... "
 
-        if [ ! -r $SCARLING_HOME/scarling.jar ]; then
+        if [ ! -r $SCARLING_HOME/scarling-$VERSION.jar ]; then
             echo "FAIL"
             echo "*** scarling jar missing - not starting"
             exit 1
@@ -62,19 +63,17 @@ case "$1" in
         fi
         
         ulimit -n 8192 || echo -n " (no ulimit)"
-        daemon $daemon_args --user $AS_USER --stderr=/var/log/scarling/error -- ${JAVA_HOME}/bin/java ${JAVA_OPTS} -jar ${SCARLING_HOME}/scarling.jar
-        sleep 1
-        if running; then
-            echo "done."
-        else
-            sleep 2
-            if running; then
-                echo "done."
-            else
-                # give up.
+        daemon $daemon_args --user $AS_USER --stdout=/var/log/scarling/stdout --stderr=/var/log/scarling/error -- ${JAVA_HOME}/bin/java ${JAVA_OPTS} -jar ${SCARLING_HOME}/scarling.jar
+        tries=0
+        while ! running; do
+            tries=$((tries + 1))
+            if [ $tries -ge 5 ]; then
                 echo "FAIL"
+                exit 1
             fi
-        fi
+            sleep 1
+        done
+        echo "done."
     ;;
 
     stop)
@@ -85,16 +84,16 @@ case "$1" in
         fi
         
         (echo "shutdown"; sleep 2) | telnet localhost 22122 >/dev/null 2>&1
-        if running; then
-            sleep 2
-            if running; then
+        tries=0
+        while running; do
+            tries=$((tries + 1))
+            if [ $tries -ge 5 ]; then
                 echo "FAIL"
-            else
-                echo "done."
+                exit 1
             fi
-        else
-            echo "done."
-        fi
+            sleep 1
+        done
+        echo "done."
     ;;
     
     status)
